<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Trader</string>
    <string name="system">System</string>
    <string name="settings_1c">1C</string>
    <string name="uploads">Upload</string>
    <string name="warehouses">Warehouses</string>
    <string name="clients">Clients</string>
    <string name="manangers">Managers</string>
    <string name="remains">Remains</string>
    <string name="nomenclature">Nomenclature</string>
    <string name="organizations">Organizations</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="type">Type</string>
    <string name="organization">Organization</string>
    <string name="manager">Current manager</string>
    <string name="client">Current client</string>
    <string name="count">Count:</string>
    <string name="warehouse">Warehouse</string>
    <string name="btnNewClient">Create new</string>
    <string name="client_not_selected">Client not selected</string>
    <string name="connecting">Connecting to database&#8230;</string>
    <string name="loadManagers">Loading managers&#8230;</string>
    <string name="loadOrganizations">Loading organizations&#8230;</string>
    <string name="addPosition">Add position</string>
    <string name="approve">Approve</string>
    <string name="back">Back</string>
    <string name="upload">Upload to 1C</string>
    <string name="search">Search</string>
    <string name="select">Select</string>
    <string name="dataloading">Reading information from database&#8230;</string>
    <string name="searching">Searching&#8230;</string>
    <string name="selectClient">Select client</string>
    <string name="selectNomeclature">Choose the nomenclature</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="dont_save">Don\'t save</string>
    <string name="saving_question">Save settings before closing?</string>
    <string name="create">Create</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="delete_all_positions">Delete all positions?</string>
    <string name="delete_position">Delete position:</string>
    <string name="clear">Clear</string>
    <string name="clear_client_field">To clear a field: Client?</string>
    <string name="order">Order</string>
    <string name="search_by_name">Search by name:</string>
    <string name="name">Name</string>
    <string name="search_param">Searching parameters</string>
    <string name="search_by">Search by</string>
    <string name="code_param">code</string>
    <string name="name_param">name</string>
    <string name="by_code_param">by code</string>
    <string name="by_name_param">by name</string>
    <string name="client_short_name">Short name:</string>
    <string name="client_full_name">Full name:</string>
    <string name="client_type">Type:</string>
    <string name="code">Code</string>
    <string name="rests">Rests</string>
    <string name="remains_on">The remains on:</string>
    <string name="confirm_change_doc_type">The list of the chosen nomenclature will be cleared. To replace document type?</string>
    <string name="choose_manager">Choose the manager</string>
    <string name="choose_organization">Choose trade organization</string>
    <string name="heading">Heading</string>
    <string name="dublicating_position">Error: Dublicating position</string>
    <string name="inadmissible_quantity">Error: Inadmissible quantity</string>
    <string name="settings">Settings</string>
    <string name="enter_password">Enter password</string>
    <string name="enter">Enter</string>
    <string name="ok">OK</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="apply">Apply</string>

    <!-- SQL server -->
    <string name="host">Host</string>
    <string name="port">Port</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="database">Database</string>

    <!-- public fields -->
    <string name="table_name">Table</string>
    <string name="field_id">ID</string>
    <string name="field_code">CODE</string>
    <string name="field_descr">DESCR</string>
    <string name="field_parent_id">Parent ID</string> <!-- warehouses, clients -->


    <!-- Upload -->
    <string name="domain">Domain</string>
    <string name="catalog">Catalog</string>

    <!-- warehouses -->
    <string name="field_is_folder">Is folder</string>

    <!-- managers -->
    <string name="field_activity">isActive</string>

    <!-- clients -->
    <string name="field_client_type_id">Type</string>
    <string name="field_client_full_name">Full name</string>
    <string name="allowed_groups">Allowed groups</string>

    <!-- remains -->
    <string name="field_perion">Period</string>

    <string-array name="menu">
        <item>Delete</item>
        <item>Remains</item>
    </string-array>

</resources>