<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/remains_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/paramView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_param" />

    <EditText
        android:id="@+id/requiredEdit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="none" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/searchByView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_by"
        android:textAppearance="?android:attr/textAppearance" />

    <RadioGroup
        android:id="@+id/paramGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radioByCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/code_param" />

        <RadioButton
            android:id="@+id/radioByName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_param" />
    </RadioGroup>

</LinearLayout>