<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/clientShortNameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/client_short_name" />

    <EditText
        android:id="@+id/clientShortNameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/clientShortNameView"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/clientFullNameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/clientShortNameEdit"
        android:text="@string/client_full_name" />

    <EditText
        android:id="@+id/clientFullNameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/clientFullNameView"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/clientTypeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/clientTypeSpinner"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/clientFullNameEdit"
        android:gravity="center"
        android:text="@string/client_type" />

    <Spinner
        android:id="@+id/clientTypeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/clientFullNameEdit"
        android:layout_toRightOf="@+id/clientTypeView"
        android:gravity="center"
        android:padding="0dip" />

</RelativeLayout>