<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/lblNomenclature"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/nomenclature"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/holo_blue_light" />

        <TextView
            android:id="@+id/lblFromWarehouse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/warehouse"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/holo_blue_light" />

        <View
            android:id="@+id/separator"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/holo_blue_light"
            android:paddingBottom="@dimen/element_vertical_margin"
            android:paddingLeft="@dimen/element_horizontal_margin"
            android:paddingRight="@dimen/element_horizontal_margin"
            android:paddingTop="@dimen/element_vertical_margin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/editCount"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="5"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true" >

                <requestFocus />
            </EditText>

            <Spinner
                android:id="@+id/spinnerWhTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="0dip"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout1" >

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back"
            android:paddingBottom="@dimen/element_vertical_margin"
            android:paddingLeft="@dimen/element_horizontal_margin"
            android:paddingRight="@dimen/element_horizontal_margin"
            android:paddingTop="@dimen/element_vertical_margin"
            android:src="@drawable/back_button" />

        <ImageButton
            android:id="@+id/btnApprove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dip"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="4dip"
            android:layout_marginTop="4dip"
            android:background="@android:color/transparent"
            android:contentDescription="@string/approve"
            android:src="@drawable/approve_button" />
    </LinearLayout>

</RelativeLayout>